# tica

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
tica/: __init__.py
