[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tica"
dynamic = ["version"]
description = "TESS Image CAlibration - removes instrumental effects from raw TESS Full Frame Images"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Michael Fausnaugh", email = "faus@mit.edu"}
]
keywords = ["TESS", "astronomy", "calibration", "image processing", "FFI"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.7",
    "astropy>=5.0",
    "matplotlib>=3.5",
    "h5py>=3.6",
    "tess-point>=0.8.0",
    "gwcs>=0.15.0,<0.19",
    "psycopg2-binary>=2.9",
    "spiceypy>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "pre-commit"]

[project.urls]
Homepage = "https://tessgit.mit.edu/tica/tica"
Repository = "https://github.com/mmfausnaugh/tica"
Documentation = "https://archive.stsci.edu/hlsp/tica"

[tool.setuptools]
packages = ["tica", "btjd", "wcs_build"]
script-files = [
    "bin/tica-cal-ccd2ccd",
    "bin/tica-cal-ffi2ccds",
    "bin/tica-cal-ffi2ffi",
    "bin/tica-ccd-report",
    "bin/tica-production-table",
    "bin/tica-ffi2ccds",
    "bin/tica-ccds2ffi",
    "bin/tica-trim-ccds2ffi",
    "bin/tica-calibrate-spoc",
    "bin/tica-calibrate-tso",
    "bin/tica-wcs-step1-allcam-allccd",
    "bin/tica-wcs-step2-allcam-allccd",
    "bin/tica-wcs-spoc",
    "wcs_build/step1_get_refimg_ctrlpts.py",
    "wcs_build/step2_mkwcs.py",
    "bin/tica-check-delivery",
    "bin/tica-stage-delivery",
    "bin/tica-darktime",
    "bin/tica-doall-automate",
    "btjd/tica-dump-ephemeris.py",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.package-data]
btjd = ["tess_ephem.txt"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
